# malasim

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  TODO.md  VERSION.md  vcpkg.json
src/: CMakeLists.txt  example.h  main.cpp  version.h
src/Config/: Config.h
src/Configuration/: Config.cpp  Config.h  ConfigData.h  DrugParameters.cpp  DrugParameters.h  EpidemiologicalParameters.h  GenotypeParameters.cpp  GenotypeParameters.h  IConfigClass.h  IConfigData.cpp  IConfigData.h  ImmuneSystemParameters.h  ModelSettings.h  MosquitoParameters.cpp  MosquitoParameters.h  MovementSettings.h  ParasiteParameters.h  PopulationDemographic.h  PopulationEvents.h  PreconfigPopulationEvents.h  README.md  RaptSettings.h  SeasonalitySettings.cpp  SeasonalitySettings.h  SimulationTimeFrame.h  SimulationTimeframe.h  SpatialSettings.cpp  SpatialSettings.h  StrategyParameters.cpp  StrategyParameters.h  TherapyParameters.cpp  TherapyParameters.h  TransmissionSettings.h  YAMLConverters.h
src/Configuration/SpatialSettings/: GridBasedProcessor.cpp  GridBasedProcessor.h  ISpatialSettingsProcessor.h  LocationBasedProcessor.cpp  LocationBasedProcessor.h  SpatialSettings.cpp  SpatialSettings.h
src/Core/: README.md
src/Core/Random/: README.md  Random.cpp  Random.h
src/Core/Scheduler/: Dispatcher.cpp  Dispatcher.h  EventManager.cpp  EventManager.h  README.md  Scheduler.cpp  Scheduler.h
src/Environment/: README.md  SeasonalDisabled.cpp  SeasonalDisabled.h  SeasonalEquation.cpp  SeasonalEquation.h  SeasonalInfo.h  SeasonalPattern.cpp  SeasonalPattern.h  SeasonalRainfall.cpp  SeasonalRainfall.h
src/Events/: BirthdayEvent.cpp  BirthdayEvent.h  CirculateToTargetLocationNextDayEvent.cpp  CirculateToTargetLocationNextDayEvent.h  EndClinicalByNoTreatmentEvent.cpp  EndClinicalByNoTreatmentEvent.h  EndClinicalDueToDrugResistanceEvent.cpp  EndClinicalDueToDrugResistanceEvent.h  EndClinicalEvent.cpp  EndClinicalEvent.h  Event.cpp  Event.h  MatureGametocyteEvent.cpp  MatureGametocyteEvent.h  MoveParasiteToBloodEvent.cpp  MoveParasiteToBloodEvent.h  ProgressToClinicalEvent.cpp  ProgressToClinicalEvent.h  README.md  RaptEvent.cpp  RaptEvent.h  ReceiveMDATherapyEvent.cpp  ReceiveMDATherapyEvent.h  ReceiveTherapyEvent.cpp  ReceiveTherapyEvent.h  ReportTreatmentFailureDeathEvent.cpp  ReportTreatmentFailureDeathEvent.h  ReturnToResidenceEvent.cpp  ReturnToResidenceEvent.h  SwitchImmuneComponentEvent.cpp  SwitchImmuneComponentEvent.h  TestTreatmentFailureEvent.cpp  TestTreatmentFailureEvent.h  UpdateEveryKDaysEvent.cpp  UpdateEveryKDaysEvent.h  UpdateWhenDrugIsPresentEvent.cpp  UpdateWhenDrugIsPresentEvent.h
src/Events/Environment/: EnvironmentEventBuilder.cpp  EnvironmentEventBuilder.h  README.md  UpdateEcozoneEvent.hxx
src/GIS/: AscFile.cpp  SpatialData.h
src/Helpers/: DbLoader.hxx  NumberHelpers.hxx  SQLiteDatabase.h  TimeHelpers.h
src/MDC/: ModelDataCollector.cpp  ModelDataCollector.h  README.md
src/Mosquito/: Mosquito.cpp  Mosquito.h  README.md
src/Parasites/: GeneInfo.h  Genotype.cpp  Genotype.h  GenotypeDatabase.cpp  GenotypeDatabase.h  README.md
src/Population/: ClinicalUpdateFunction.cpp  ClinicalUpdateFunction.h  ClonalParasitePopulation.cpp  ClonalParasitePopulation.h  DrugsInBlood.cpp  DrugsInBlood.h  Population.cpp  Population.h  README.md  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Reporters/: ConsoleReporter.cpp  ConsoleReporter.h  MMCReporter.cpp  MMCReporter.h  MonthlyReporter.cpp  MonthlyReporter.h  NovelDrugReporter.cpp  NovelDrugReporter.h  README.md  Reporter.cpp  Reporter.h  SQLiteDbReporter.cpp  SQLiteDbReporter.h  SQLiteDistrictReporter.cpp  SQLiteDistrictReporter.h  SQLiteMonthlyReporter.cpp  SQLiteMonthlyReporter.h  SQLitePixelReporter.cpp  SQLitePixelReporter.h  SQLiteValidationReporter.cpp  SQLiteValidationReporter.h  TACTReporter.cpp  TACTReporter.h  TravelTrackingReporter.cpp  ValidationReporter.cpp  ValidationReporter.h
src/Simulation/: Model.cpp  Model.h  README.md  main.cpp
src/Spatial/: README.md  SpatialModel.hxx
src/Treatment/: ITreatmentCoverageModel.cpp  ITreatmentCoverageModel.h  InflatedTCM.cpp  LinearTCM.cpp  LinearTCM.h  README.md
src/Utils/: AscFile.cpp  AscFile.h  Cli.h  Cli.hxx  Constants.h  Indexer.hxx  Logger.cpp  Logger.h  MultinomialDistributionGenerator.cpp  MultinomialDistributionGenerator.h  ObjectPool.h  README.md  Random.cpp  Random.h  Time.h  TypeDef.h  TypeDef.hxx  YamlFile.h
src/Validation/: MovementValidation.cpp  MovementValidation.h
src/malasim/: main.cpp  version.h  version_generated.h
tests/: .clang-tidy  CMakeLists.txt  SpdlogEnvironment.cpp  example_test.cpp
tests/Configuration/: yaml_date_conversion_test.cpp  yaml_drug_parameters_conversion_test.cpp  yaml_epidemiological_parameters_conversion_test.cpp  yaml_genotype_parameters_conversion_test.cpp  yaml_immune_system_parameters_conversion_test.cpp  yaml_model_settings_conversion_test.cpp  yaml_mosquito_parameters_conversion_test.cpp  yaml_movement_settings_conversion_test.cpp  yaml_parasite_parameters_conversion_test.cpp  yaml_population_demographic_conversion_test.cpp  yaml_population_events_conversion_test.cpp  yaml_seasonality_settings_conversion_test.cpp  yaml_simulation_timeframe_conversion_test.cpp  yaml_spatial_settings_conversion_test.cpp  yaml_strategy_parameters_conversion_test.cpp  yaml_therapy_parameters_conversion_test.cpp
tests/Environment/: SeasonalPatternFixture.h  SeasonalPatternTest.cpp
tests/Mosquito/: MosquitoTest.cpp
tests/Parasites/: GenotypeDatabaseTest.cpp  GenotypeTest.cpp
tests/Population/: ClinicalUpdateFunctionTest.cpp  ClonalParasitePopulationTest.cpp  DrugsInBloodTest.cpp  ImmuneComponentTest.cpp  ImmuneSystemTest.cpp  ParasiteDensityUpdateFunctionTest.cpp  PopulationGenerateIndividualTest.cpp  PopulationTest.cpp  SingleHostClonalParasitePopulationsTest.cpp
tests/Treatment/: InflatedTCMTest.cpp  LinearTCMTest.cpp  SteadyTCMTest.cpp
tests/Utils/: ObjectPoolTest.cpp
tests/helpers/: test_helpers.cpp  test_helpers.h
(+745 files in other folders)
